fixed: project card z-index update too fast

--- a/src/projects/project.css
+++ b/src/projects/project.css
@@ -2,7 +2,7 @@
     margin: 30px 0;
     height: 50vh;
     position: relative;
-    transition: 0.5s ease;
+    transition: transform 0.5s ease;
     padding: 0 !important;
 }
 
@@ -73,7 +73,6 @@
 
 .project-card:hover {
     transform: scale(1.1);
-    z-index: 1;
 }
 
 .project-card:hover .project-links {
